# qt-install

./: README.md
.github/workflows/: cache-qt.yml
misc/: CMakePresets.json
test2/: CMakeLists.txt
test3/: CMakeLists.txt  CMakeUserPresets.json  SimpleView.cxx
